--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "lint-staged": {
     "*.{ts,js}": [
-      "prettier --write --ignore-unknown",
+      "eslint --fix",
       "prettier --write"
     ]
   }
